# python-fastAPI

./: main.py  pyproject.toml
models/: _init_.py  inventory.py  users.py
routes/: _init_.py  inventory.py  users.py
utils/: database.py  validate_token.py
